# rule34-posts-wrapper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml
src/rule34_posts_wrapper/: __init__.py  __version__.py  posts_wrapper.py  tags_wrapper.py  utils.py
src/rule34_posts_wrapper/objects/: __init__.py  page.py  post.py  tag.py
tests/: __init__.py  test_posts_wrapper.py  test_tags_wrapper.py
