[build-system]
requires = ["setuptools>=60.2.0"]
build-backend = "setuptools.build_meta"
[project]
name = "rule34-posts-wrapper_nukdokplex"
version = "0.1"
authors = [
    { name="NukDokPlex", email="nukdokplex@nukdotcom.ru" }
]
description = "A rule34.paheal.net posts wrapper"
readme = "README.md"
requires-python = ">=3.9"