[build-system]
requires = ["setuptools>=60.2.0"]
build-backend = "setuptools.build_meta"
[project]
name = "rule34-posts-wrapper_nukdokplex"
version = "0.1"
authors = [
    { name="NukDokPlex", email="nukdokplex@nukdotcom.ru" }
]
description = "A rule34.paheal.net posts wrapper"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nukdokplex/rule34-posts-wrapper"
"Bug Tracker" = "https://github.com/nukdokplex/rule34-posts-wrapper/issues"